# CommunicationsProtocol

./: CMakeLists.txt  README.md  build_and_run.sh
include/: iface.h  tlm.h  tlm_parser.h
src/: iface.cpp  tlm_parser.cpp  tlm_proc.cpp
test/: TlmParserTests.cpp
